<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Wifi State</string>
    <string name="ok">OK</string>
    <string name="preferences">Settings</string>
    <string name="preferences_notification">State indication</string>
    <string name="preferences_ping">Health indication</string>
    <string name="about">About</string>
    <string name="support">Support</string>
    <string name="support_url">http://orleaf.net</string>
    <string name="pref_enable_title">Enable</string>
    <string name="pref_clearable_title">Clearable</string>
    <string name="pref_clearable_summary">Enable to clear manually.</string>
    <string name="pref_clear_on_connected_title">Clear on connected</string>
    <string name="pref_clear_on_connected_summary">Clear when network connected.</string>
    <string name="pref_clear_on_scanning_title">Clear on scanning</string>
    <string name="pref_clear_on_scanning_summary">Clear when Wi-Fi scanning.</string>
    <string name="pref_clear_on_disabled_title">Clear on disabled</string>
    <string name="pref_clear_on_disabled_summary">Clear when network disabled.</string>
    <string name="pref_show_data_network_title">Mobile network</string>
    <string name="pref_show_data_network_summary">Show mobile network state when Wi-Fi disabled.</string>
    <string name="pref_action_on_tap_title">Action on tap notification</string>
    <string name="pref_ping_title">Enable health check</string>
    <string name="pref_ping_summary">Check reachability to specified host.</string>
    <string name="pref_ping_on_mobile_title">Mobile network</string>
    <string name="pref_ping_on_mobile_summary">Also check on mobile network.</string>
    <string name="pref_ping_target_title">Target host</string>
    <string name="pref_ping_target_default">Default router</string>
    <string name="pref_ping_timeout_title">Timeout</string>
    <string name="pref_ping_timeout_unit">sec.</string>
    <string name="pref_ping_interval_title">Interval</string>
    <string name="pref_ping_interval_unit">sec.</string>
    <string name="pref_ping_retry_title">Retry count</string>
    <string name="pref_ping_retry_unit"></string>
    <string name="pref_ping_retry_zero">No retry</string>
    <string name="pref_ping_disable_wifi_on_fail_title">Disable Wi-Fi on failure</string>
    <string name="pref_ping_disable_wifi_on_fail_summary">Disable Wi-Fi when retry over.</string>
    <string name="pref_ping_disable_wifi_period_title">Disable Wi-Fi period</string>
    <string name="pref_ping_disable_wifi_period_unit">min.</string>
    <string name="state_enabling">Enabling Wi-Fi</string>
    <string name="state_enabled">Wi-Fi enabled</string>
    <string name="state_scanning">Scanning</string>
    <string name="state_authenticating">Authenticating</string>
    <string name="state_associating">Associating</string>
    <string name="state_reassociating">Reassociating</string>
    <string name="state_associated">Associated</string>
    <string name="state_handshaking">Handshaking</string>
    <string name="state_handshake_completed">Handshake completed</string>
    <string name="state_obtaining_ipaddr">Obtaining IP address</string>
    <string name="state_connected">Connected</string>
    <string name="state_disconnected">Disconnected</string>
    <string name="state_unavailable">Network unavaiable</string>
    <string name="state_mobile_connecting">Connecting to mobile network</string>
    <string name="state_mobile_connected">Connected to mobile network</string>
    <string name="wifi">Wi-Fi</string>
    <string name="wifi_reenable">Reconnect</string>
    <string name="wifi_settings">Wi-Fi settings</string>
    <string name="checking_status">Checking status&#8230;</string>
    <string name="enabling_wifi">Enabling Wi-Fi&#8230;</string>
    <string name="disabling_wifi">Disabling Wi-Fi&#8230;</string>
    <string name="press_menu_to_config">Press MENU to configure application settings.</string>
    <string name="connect_to">Connect to</string>
    <string name="open_dialog">Open Dialog</string>
    <string name="toggle_wifi">Toggle Wi-Fi</string>
    <string name="reenable_wifi">Reconnect Wi-Fi</string>
    <string name="open_wifi_settings">Wi-Fi settings</string>
    <string name="browse_router">Router settings</string>

</resources>