<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="enabled"
        android:title="@string/pref_enable_title" />

    <PreferenceCategory android:title="@string/preferences_notification" >
        <CheckBoxPreference
            android:defaultValue="false"
            android:dependency="enabled"
            android:key="clearable"
            android:summary="@string/pref_clearable_summary"
            android:title="@string/pref_clearable_title" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:dependency="enabled"
            android:key="clear_on_connected"
            android:summary="@string/pref_clear_on_connected_summary"
            android:title="@string/pref_clear_on_connected_title" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:dependency="enabled"
            android:key="clear_on_disabled"
            android:summary="@string/pref_clear_on_disabled_summary"
            android:title="@string/pref_clear_on_disabled_title" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:dependency="enabled"
            android:key="clear_on_scanning"
            android:summary="@string/pref_clear_on_scanning_summary"
            android:title="@string/pref_clear_on_scanning_title" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:dependency="enabled"
            android:key="show_data_network"
            android:summary="@string/pref_show_data_network_summary"
            android:title="@string/pref_show_data_network_title" />

        <ListPreference
            android:defaultValue="open_dialog"
            android:dependency="enabled"
            android:entries="@array/entries_action_on_tap"
            android:entryValues="@array/entryvalues_action_on_tap"
            android:key="action_on_tap"
            android:title="@string/pref_action_on_tap_title" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/preferences_other" >
        <Preference
            android:key="wifi_settings"
            android:title="@string/wifi_settings" />
        <Preference
            android:key="browse_router"
            android:title="@string/browse_router" />
        <Preference
            android:key="about"
            android:title="@string/about" />
    </PreferenceCategory>

</PreferenceScreen>